# YoloTracker

./: .gitignore  CMakeLists.txt
cmake/: FindCaffe.cmake  FindOpenCV.cmake  OpenCVModules.cmake
include/: SimplePipeline.h
src/: yolo_main.cpp
yolo/: detector.cpp  detector.h  yolo_layer.cpp
